# ampl

./: .clang-format  CMakeLists.txt  build.sh  package.sh  readme.md  rebuild.sh
cmake/: Packing.cmake  amplConfig.cmake.in  cmake_uninstall.cmake.in
dev/: CMakeLists.txt  test.cpp  test_util.hpp
include/ampl/: ampl.hpp  ampl_config.h  ampl_config.h.in  collision.hpp  common.hpp  geometry.hpp  kinematics.hpp  utils.hpp
python/: CMakeLists.txt  build.sh  pyproject.toml
python/src/ampl/: __init__.py
python/src/ampl/_core/: __init__.pyi
python/src/ampl/_utils/: io.py  pyply.py
python/src/binding/: collision.hpp  geometry.hpp  kinematics.hpp  python.cc  stlfile.hpp  trimesh.hpp  utils.hpp
python/test/: edf.py  fk.py  test_vsph.py  viser_arm6.py  viser_arm7.py  viser_arm7_trajectory.py  viser_dualarm7.py  viz_viser.py
src/: CMakeLists.txt
src/algo/: CMakeLists.txt  pdqsort.h  simd_sse.hpp  threadpool.h
src/collision/: CMakeLists.txt  collision_narrow_phase.cpp
src/geometry/: CMakeLists.txt  distancefield.cpp  edt.hpp  intersect.cpp  magic.hpp  octree_unified.h  spatialcache.cpp  transform.cpp  trimesh.cpp  vhacd.h
src/kinematics/: CMakeLists.txt  arm_base.cpp  arm_database.hpp  arm_r6.cpp  arm_r7.cpp  arms.hpp  kinematics_common.hpp  subproblem.cpp
src/pointcloud/: nanoflann.hpp
src/utils/: CMakeLists.txt  happly.h  sys.cpp
