[build-system]
requires = ["scikit-build-core", "nanobind", "typing_extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "ampl"
version = "0.0.1"
requires-python = ">=3.8"
env_list = ["3.13", "3.12", "3.11", "3.10"]
authors = [
    { name = "Chengzhe Zhou", email = "chengzhe.zhou@foxmail.com" }    
]
dependencies = [  
  "numpy>=1.26.0"
]



[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
editable.rebuild = false
cmake.build-type = "Release"

